# txxxt

./: .gitignore  Cargo.toml  Dockerfile.relay  LICENSE  README.md  install.sh  railway.toml
.github/workflows/: release.yml
assets/: txxxt-logo-ascii.html  txxxt-logo.html
docs/superpowers/specs/: 2026-03-21-onnx-person-segmentation-design.md
src/: audio.rs  background.rs  camera.rs  charsets.rs  config.rs  export.rs  main.rs  render.rs  segmentation.rs  tui.rs
src/net/: mod.rs  peer.rs  presence.rs  protocol.rs  relay.rs
web/: index.html  wrangler.jsonc
web/functions/: [[path]].js
