[package]
name = "txxxt"
version = "0.2.0"
edition = "2021"
description = "Terminal-based ASCII video call tool"
license = "MIT"

[[bin]]
name = "txxxt"
path = "src/main.rs"

[[bin]]
name = "txxxt-relay"
path = "src/bin/relay.rs"
required-features = ["relay"]

[features]
default = []
relay = []

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Camera
nokhwa = { version = "0.10", features = ["input-native"] }

# Image processing
image = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Clipboard
arboard = "3"

# Audio
cpal = "0.15"
webrtc-audio-processing = { version = "2", features = ["bundled"] }

# Config persistence
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
