[package]
name = "txxxt"
version = "1.3.0"
edition = "2021"
default-run = "txxxt"
description = "Terminal-based ASCII video call tool"
license = "MIT"

[[bin]]
name = "txxxt"
path = "src/main.rs"

[[bin]]
name = "txxxt-relay"
path = "src/bin/relay.rs"
required-features = ["relay"]

[features]
default = ["client"]
client = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:nokhwa",
    "dep:image",
    "dep:arboard",
    "dep:cpal",
    "dep:webrtc-audio-processing",
    "dep:serde",
    "dep:toml",
    "dep:dirs",
    "dep:ort",
    "dep:ndarray",
    "dep:kamadak-exif",
]
relay = ["dep:sqlx", "dep:tokio", "dep:uuid"]

[dependencies]
# Shared
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# TUI (client only)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Camera (client only)
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Image processing (client only)
image = { version = "0.25", optional = true }
kamadak-exif = { version = "0.6", optional = true }

# Clipboard (client only)
arboard = { version = "3", optional = true }

# Audio (client only)
cpal = { version = "0.15", optional = true }
webrtc-audio-processing = { version = "2", features = ["bundled"], optional = true }

# Config persistence (client only)
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5", optional = true }

# ONNX person segmentation (client only)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }

# Relay server (relay only)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
